--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,15 @@ body {
 .ck-editor__editable_inline {
     min-height: 500px;
 }
+
+.ck-editor__editable_inline {
+    min-height: 600px;
+}
+
+.form-check-input {
+    position: relative !important;
+    opacity: 1 !important;
+    width: initial !important;
+    height: 1rem !important;
+    margin: initial !important;
+}
