--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="mouse-cursor cursor-outer"></div>
-        <div class="mouse-cursor cursor-inner"></div>
+       @* <div class="mouse-cursor cursor-outer"></div>
+        <div class="mouse-cursor cursor-inner"></div>*@
 
-        <div id="my_switcher" class="my_switcher">
+   @*     <div id="my_switcher" class="my_switcher">
             <ul>
                 <li>
                     <a href="javascript: void(0);" data-theme="light" class="setColor light">
@@ -38,23 +38,23 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </div>*@
 
         <!-- Start Header -->
         <header class="header axil-header  header-light header-sticky header-with-shadow">
             <div class="header-wrap">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-3 col-12">
+                    <div class=" col-md-3  col-12">
                         <div class="logo">
                             <a href="index.html">
-                                <img class="dark-logo" src="~/assets/images/logo/logo-black.png" alt="Blogar logo">
-                                <img class="light-logo" src="~/assets/images/logo/logo-white2.png" alt="Blogar logo">
+                                <img class="" src="~" alt="">
+                              
                             </a>
                         </div>
                     </div>
                     <div class="col-xl-6 d-none d-xl-block">
                         <div class="mainmenu-wrapper">
-                            <nav class="mainmenu-nav">
+                            <nav class="mainmenu-nav ">
 
                                 <!-- Start Mainmanu Nav -->
                                 <ul class="mainmenu">
@@ -69,8 +69,8 @@
                             </nav>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-8 col-md-8 col-sm-9 col-12">
-                        <div class="header-search text-end d-flex align-items-center">
+                    <div class=" col-md-3 col-12">
+                        <div class="header-search  d-flex align-items-start ">
                             <form asp-controller="Home" asp-action="SearchIndex" class="header-search-form d-sm-block d-none">
                                 <div class="axil-search form-group">
                                     <button type="submit" class="search-button"><i class="fal fa-search"></i></button>
@@ -88,14 +88,17 @@
                             </div>
                         </div>
 
+                        <div class="   ">
+                            <div class="header-search text-end d-flex align-items-center mainmenu-wrapper">
+                                <div class="mainmenu-nav ms-auto d-none d-xl-block ">
+                                    <ul class="mainmenu">
+                                        <partial name="_LoginPartial" />
+                                    </ul>
+                                </div>
+
+
                     </div>
-                    <div class="col-xl-3 col-lg-8 col-md-8 col-sm-9 col-12">
-                        <div class="header-search text-end d-flex align-items-center mainmenu-wrapper">
-                            <div class="mainmenu-nav ms-auto d-none d-xl-block ">
-                                <ul class="mainmenu">
-                                    <partial name="_LoginPartial" />
-                                </ul>
-                            </div>
+                   
 
 
                             <!-- Start Hamburger Menu  -->
@@ -142,88 +145,15 @@
         @RenderBody()
 
         @*<partial name="_LoginPartial" />*@
-        <!-- Start Footer Area  -->
-        <div class="axil-footer-area axil-footer-style-1 bg-color-white">
-            <!-- Start Footer Top Area  -->
-            <div class="footer-top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <!-- Start Post List  -->
-                            <div class="inner d-flex align-items-center flex-wrap">
-                                <h5 class="follow-title mb--0 mr--20">Follow Us</h5>
-                                <ul class="social-icon color-tertiary md-size justify-content-start">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                </ul>
-                            </div>
-                            <!-- End Post List  -->
+      
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End Footer Top Area  -->
-            <!-- Start Copyright Area  -->
-            <div class="copyright-area">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-9 col-md-12">
-                            <div class="copyright-left">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img class="dark-logo" src="~/assets/images/logo/logo-black.png" alt="Logo Images">
-                                        <img class="light-logo" src="~/assets/images/logo/logo-white2.png" alt="Logo Images">
-                                    </a>
-                                </div>
-                                <ul class="mainmenu justify-content-start">
-                                    <li>
-                                        <a class="hover-flip-item-wrapper" href="#">
-                                            <span class="hover-flip-item">
-                                                <span data-text="Contact Us">Contact Us</span>
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="hover-flip-item-wrapper" href="#">
-                                            <span class="hover-flip-item">
-                                                <span data-text="Terms of Use">Terms of Use</span>
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="hover-flip-item-wrapper" href="#">
-                                            <span class="hover-flip-item">
-                                                <span data-text="AdChoices">AdChoices</span>
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="hover-flip-item-wrapper" href="#">
-                                            <span class="hover-flip-item">
-                                                <span data-text="Advertise with Us">Advertise with Us</span>
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="hover-flip-item-wrapper" href="#">
-                                            <span class="hover-flip-item">
-                                                <span data-text="Blogar Store">Blogar Store</span>
-                                            </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-12">
-                            <div class="copyright-right text-start text-lg-end mt_md--20 mt_sm--20">
-                                <p class="b3">All Rights Reserved © 2022</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          
+                             
+            
             <!-- End Copyright Area  -->
         </div>
         <!-- End Footer Area  -->
