--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                                 <span class="b3 subtitle">Full-Stack Software Developer</span>
                             </div>
                             <div class="content">
-                                <p class="b1 description">At 40+ years old, my favorite compliment is being told that I look like my mom. Seeing myself in her image, like this daughter up top, makes me so proud of how far I’ve come, and so thankful for where I come from</p>
+                                <p class="b1 description">Coding has always been a interest of mine from a young age. To see myself get more efficient every day is truly rewarding!</p>
                                 <ul class="social-share-transparent size-md">
                              
                                     <li><a href="#"><i class="fab fa-github"></i></a></li>
