--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-@using TravisBrownBlog.Services.Interfaces
+﻿@using TravisBrownBlog.Services.Interfaces
+@inject IBlogPostService blogService
 
-@inject IBlogPostService BlogPostService
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,24 +23,7 @@
 </head>
 <body>
     <div class="main-wrapper">
-       @* <div class="mouse-cursor cursor-outer"></div>
-        <div class="mouse-cursor cursor-inner"></div>*@
 
-   @*     <div id="my_switcher" class="my_switcher">
-            <ul>
-                <li>
-                    <a href="javascript: void(0);" data-theme="light" class="setColor light">
-                        <span title="Light Mode">Light</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript: void(0);" data-theme="dark" class="setColor dark">
-                        <span title="Dark Mode">Dark</span>
-                    </a>
-                </li>
-            </ul>
-        </div>*@
-          <!-- Start Header -->
         <header class="header axil-header  header-dark header-sticky header-with-shadow ">
             <div class="header-wrap">
                 <div class="row justify-content-between align-items-center">
@@ -57,11 +41,43 @@
                             <nav class="mainmenu-nav">
                                 <!-- Start Mainmanu Nav -->
                                 <ul class="mainmenu">
-                                    <li><a asp-action="Index" asp-controller="Home">Home</a></li>
-                                    <li><a asp-controller="BlogPosts" asp-action="Index">BlogPosts</a></li>
-                                    <li><a asp-controller="Categories" asp-action="Index">Categories</a></li>
-                                    <li><a asp-controller="Comments" asp-action="Index">Comments</a></li>
-                                    <li><a asp-controller="Tags" asp-action="Index">Tags</a></li>
+                                   <li class="menu-item-has-children">
+                                       <a asp-controller="Home" asp-action="AuthorPage">Home</a>
+                                   </li>
+                                   @foreach(var category in await blogService.GetCategoriesAsync())
+                                   {
+                                       <li>
+                                           <a asp-controller="Categories"
+                                              asp-action="Details"
+                                              asp-route-id="@category.Id">
+                                              @category.Name
+                                              </a>
+                                       </li>
+                                   }
+                                   @if (User.IsInRole("Administrator"))
+                                   {
+                                       <li class="menu-item-has-children"><a> Author</a>
+                                           <ul class="axil-submenu">
+                                               <li>
+                                                   <a class="hover-flip-item"
+                                                     asp-controller="BlogPosts"
+                                                     asp-action="Index">
+                                                        <span class="hover-flip-item">
+                                                            <span data-text="Manage Categories">Manage Categories</span>
+                                                        </span>
+                                                </a>
+                                               </li>
+                                               <li>
+                                                   <a class="hover-flip-item-wrapper"
+                                                      href="/swagger">
+                                                      <span class="hover-flip-item">
+                                                          <span data-text="API Docs">API DOCS</span>
+                                                      </span>
+                                                  </a>
+                                               </li>
+                                            </ul>
+                                        </li>
+                                   }
                                 </ul>
                             </nav>
                         </div>
